fix: header alignment

--- a/sites/public/src/patterns/PageHeaderLayout.module.scss
+++ b/sites/public/src/patterns/PageHeaderLayout.module.scss
@@ -1,121 +1,124 @@
-.page-header-layout {
-  --page-header-layout-padding-desktop: var(--seeds-spacer-container);
-
-  .page-header-background {
-    background-color: var(--seeds-bg-color-surface-primary-inverse);
+.page-header-background {
+  background-color: var(--seeds-bg-color-surface-primary-inverse);
+  display: flex;
+  justify-content: center;
+}
+.page-header-outer {
+  margin: var(--seeds-spacer-container) var(--seeds-s4);
+  max-width: var(--seeds-width-5xl);
+  width: 100%;
+  @media (--md-down) {
+    margin: var(--seeds-s8) var(--seeds-s4);
   }
-  .page-header-outer {
-    padding: var(--page-header-layout-padding-desktop);
-    margin: auto;
-    max-width: var(--seeds-width-5xl);
-    @media (--md-down) {
-      padding: var(--seeds-s8) var(--seeds-s4);
-    }
-  }
+}
 
-  .page-header-inner {
-    max-width: var(--seeds-width-3xl);
-  }
+.page-header-inner {
+  max-width: var(--seeds-width-3xl);
+}
 
-  .page-header-text-group {
-    --subheading-font-size: var(--seeds-font-size-lg);
-    --heading-color: var(--seeds-color-on-inverse);
-    --subheading-color: var(--seeds-color-on-inverse);
-    --subheading-margin: var(--seeds-s6) 0;
+.page-header-text-group {
+  --subheading-font-size: var(--seeds-font-size-lg);
+  --heading-color: var(--seeds-color-on-inverse);
+  --subheading-color: var(--seeds-color-on-inverse);
+  --subheading-margin: var(--seeds-s6) 0;
 
-    h1,
-    p {
-      font-family: var(--seeds-font-alt-sans);
-    }
-
-    h1 {
-      font-weight: var(--seeds-font-weight-semibold);
-    }
-  }
-
-  .page-header-text {
-    color: var(--seeds-color-on-inverse);
+  h1,
+  p {
     font-family: var(--seeds-font-alt-sans);
   }
 
-  .page-content-outer {
-    padding: var(--page-header-layout-padding-desktop);
-    margin: auto;
-    max-width: var(--seeds-width-5xl);
-    @media (--md-down) {
-      padding: var(--seeds-s6) var(--seeds-s4);
-    }
+  h1 {
+    font-weight: var(--seeds-font-weight-semibold);
+  }
+}
+
+.page-header-text {
+  color: var(--seeds-color-on-inverse);
+  font-family: var(--seeds-font-alt-sans);
+}
+
+.page-content-outer {
+  display: flex;
+  justify-content: center;
+  margin: var(--seeds-spacer-container) var(--seeds-s4);
+  @media (--md-down) {
+    margin: var(--seeds-s6) var(--seeds-s4);
+  }
+}
+
+.page-content-inner {
+  max-width: var(--seeds-width-5xl);
+  width: 100%;
+}
+
+.markdown {
+  max-width: var(--seeds-width-3xl);
+  font-family: var(--seeds-font-alt-sans);
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: var(--seeds-font-alt-sans);
+    font-weight: var(--seeds-font-weight-semibold);
+    padding-top: 1.5em;
   }
 
-  .markdown {
-    max-width: var(--seeds-width-3xl);
-    font-family: var(--seeds-font-alt-sans);
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-      font-family: var(--seeds-font-alt-sans);
-      font-weight: var(--seeds-font-weight-semibold);
-      padding-top: 1.5em;
-    }
+  h2:first-child {
+    padding-top: 0;
+  }
 
-    h2:first-child {
-      padding-top: 0;
+  h2 {
+    font-size: var(--seeds-type-heading-size-3xl);
+    @media (--md-down) {
+      font-size: var(--seeds-type-heading-size-3xl-mobile);
     }
+  }
+  h3 {
+    font-size: (--seeds-type-heading-size-2xl);
+    @media (--md-down) {
+      font-size: var(--seeds-type-heading-size-2xl-mobile);
+    }
+  }
+  h4 {
+    font-size: (--seeds-font-size-xl);
+    @media (--md-down) {
+      font-size: var(--seeds-type-heading-size-lg);
+    }
+  }
+  h5 {
+    font-size: var(--seeds-font-size-lg);
+  }
+  h6 {
+    font-size: var(--seeds-type-heading-size-md);
+  }
 
-    h2 {
-      font-size: var(--seeds-type-heading-size-3xl);
-      @media (--md-down) {
-        font-size: var(--seeds-type-heading-size-3xl-mobile);
-      }
-    }
-    h3 {
-      font-size: (--seeds-type-heading-size-2xl);
-      @media (--md-down) {
-        font-size: var(--seeds-type-heading-size-2xl-mobile);
-      }
-    }
-    h4 {
-      font-size: (--seeds-font-size-xl);
-      @media (--md-down) {
-        font-size: var(--seeds-type-heading-size-lg);
-      }
-    }
-    h5 {
-      font-size: var(--seeds-font-size-lg);
-    }
-    h6 {
-      font-size: var(--seeds-type-heading-size-md);
-    }
+  ol,
+  ul,
+  p {
+    padding-top: 1em;
+  }
 
-    ol,
-    ul,
-    p {
-      padding-top: 1em;
-    }
+  ul {
+    list-style: disc;
+    list-style-position: inside;
+  }
 
-    ul {
-      list-style: disc;
-      list-style-position: inside;
-    }
+  ol {
+    list-style: decimal;
+    list-style-position: inside;
+  }
 
-    ol {
-      list-style: decimal;
-      list-style-position: inside;
-    }
+  li + li {
+    padding-top: var(--seeds-spacer-text);
+  }
 
-    li + li {
-      padding-top: var(--seeds-spacer-text);
-    }
+  hr {
+    margin-top: var(--seeds-spacer-content);
+  }
 
-    hr {
-      margin-top: var(--seeds-spacer-content);
-    }
-
-    a {
-      color: var(--seeds-color-primary);
-      text-decoration: underline;
-    }
+  a {
+    color: var(--seeds-color-primary);
+    text-decoration: underline;
   }
 }
